network/cilium/cilium/cks/cassandra-app.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    cks-app: cassandra-db
  name: cassandra-db
  namespace: cassandra
spec:
  containers:
    - image: nginx
      imagePullPolicy: IfNotPresent
      name: database
      ports:
        - containerPort: 80
          protocol: TCP
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: database-vol
  volumes:
    - configMap:
        defaultMode: 420
        name: database-cm
      name: database-vol
