network/cilium/cilium/cks/cassandra-cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
  namespace: cassandra
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cassandra-db-from-backend
  namespace: cassandra
spec:
  endpointSelector: 
    matchLabels:
      cks-app: cassandra-db
  ingress:
  - fromEndpoints:
    - matchLabels:
        cks-app: backend-app
        io.kubernetes.pod.namespace: cks
